# blog-app-fastapi

./: .gitignore  alembic.ini  pyproject.toml
app/: main.py
app/api/routes/: auth.py
app/core/: config.py
app/db/: base.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 65e8a5fc06a4_initial_table_creation.py
app/db/repositories/: user.py
app/models/: user.py
app/schemas/: user.py
app/services/: security.py
scripts/: test_db_conn.py
